parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    KEYWORD
    TAB

Grammar

Rule 0     S' -> program
Rule 1     program -> CLASS PROGRAM OPEN field_decl method_decl CLOSE
Rule 2     field_decl -> type field_decl_1 SEMI
Rule 3     field_decl -> field_decl field_decl
Rule 4     field_decl -> field_decl NEWLINE
Rule 5     field_decl -> empty
Rule 6     field_decl_1 -> IDENTIFIER
Rule 7     field_decl_1 -> IDENTIFIER O_BRACKET int_literal C_BRACKET
Rule 8     field_decl_1 -> field_decl_1 COMMA field_decl_1
Rule 9     method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR block
Rule 10    method_decl -> method_decl NEWLINE
Rule 11    method_decl -> method_decl method_decl
Rule 12    method_decl -> empty
Rule 13    type_and_id -> type IDENTIFIER
Rule 14    type_and_id -> type_and_id COMMA type_and_id
Rule 15    type_or_void -> type
Rule 16    type_or_void -> VOID
Rule 17    block -> OPEN var_decl statement CLOSE
Rule 18    block -> OPEN CLOSE
Rule 19    var_decl -> type var_decl_1 SEMI
Rule 20    var_decl -> var_decl var_decl NEWLINE
Rule 21    var_decl -> empty
Rule 22    var_decl_1 -> IDENTIFIER
Rule 23    var_decl_1 -> var_decl_1 COMMA var_decl_1
Rule 24    type -> INT
Rule 25    type -> BOOLEAN
Rule 26    statement -> location ASSIGN expr SEMI
Rule 27    statement -> method_call SEMI
Rule 28    statement -> IF O_PAR expr C_PAR block NEWLINE else_or_empty
Rule 29    statement -> WHILE O_PAR expr C_PAR block
Rule 30    statement -> RETURN expr_or_empty SEMI
Rule 31    statement -> BREAK SEMI
Rule 32    statement -> CONTINUE SEMI
Rule 33    statement -> block
Rule 34    statement -> statement statement
Rule 35    statement -> statement NEWLINE
Rule 36    statement -> empty
Rule 37    expr_or_empty -> expr
Rule 38    expr_or_empty -> empty
Rule 39    else_or_empty -> ELSE block
Rule 40    else_or_empty -> else_or_empty else_or_empty
Rule 41    else_or_empty -> empty
Rule 42    method_call -> method_name O_PAR arg C_PAR
Rule 43    method_call -> CALLOUT O_PAR string_literal C_PAR
Rule 44    method_call -> CALLOUT O_PAR string_literal COMMA call COMMA C_PAR
Rule 45    method_name -> IDENTIFIER
Rule 46    arg -> expr
Rule 47    arg -> expr COMMA arg
Rule 48    location -> IDENTIFIER
Rule 49    location -> IDENTIFIER O_BRACKET expr C_BRACKET
Rule 50    expr -> location
Rule 51    expr -> literal
Rule 52    expr -> expr bin_op expr
Rule 53    expr -> NEGATIVE expr
Rule 54    expr -> EXCL expr
Rule 55    expr -> O_PAR expr C_PAR
Rule 56    call -> callout_arg
Rule 57    call -> callout_arg call
Rule 58    callout_arg -> expr
Rule 59    callout_arg -> string_literal
Rule 60    callout_arg -> callout_arg
Rule 61    bin_op -> ARITH_OP
Rule 62    bin_op -> REP_OP
Rule 63    bin_op -> EQ_OP
Rule 64    bin_op -> COND_OP
Rule 65    literal -> int_literal
Rule 66    literal -> char_literal
Rule 67    literal -> bool_literal
Rule 68    int_literal -> DECIMAL
Rule 69    int_literal -> HEXDECIMAL
Rule 70    bool_literal -> TRUE
Rule 71    bool_literal -> FALSE
Rule 72    char_literal -> CHAR
Rule 73    string_literal -> STRING
Rule 74    empty -> <empty>

Terminals, with rules where they appear

ARITH_OP             : 61
ASSIGN               : 26
BOOLEAN              : 25
BREAK                : 31
CALLOUT              : 43 44
CHAR                 : 72
CLASS                : 1
CLOSE                : 1 17 18
COMMA                : 8 14 23 44 44 47
COMMENT              : 
COND_OP              : 64
CONTINUE             : 32
C_BRACKET            : 7 49
C_PAR                : 9 28 29 42 43 44 55
DECIMAL              : 68
ELSE                 : 39
EQ_OP                : 63
EXCL                 : 54
FALSE                : 71
HEXDECIMAL           : 69
IDENTIFIER           : 6 7 9 13 22 45 48 49
IF                   : 28
INT                  : 24
KEYWORD              : 
NEGATIVE             : 53
NEWLINE              : 4 10 20 28 35
OPEN                 : 1 17 18
O_BRACKET            : 7 49
O_PAR                : 9 28 29 42 43 44 55
PROGRAM              : 1
REP_OP               : 62
RETURN               : 30
SEMI                 : 2 19 26 27 30 31 32
STRING               : 73
TAB                  : 
TRUE                 : 70
VOID                 : 16
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

arg                  : 42 47
bin_op               : 52
block                : 9 28 29 33 39
bool_literal         : 67
call                 : 44 57
callout_arg          : 56 57 60
char_literal         : 66
else_or_empty        : 28 40 40
empty                : 5 12 21 36 38 41
expr                 : 26 28 29 37 46 47 49 52 52 53 54 55 58
expr_or_empty        : 30
field_decl           : 1 3 3 4
field_decl_1         : 2 8 8
int_literal          : 7 65
literal              : 51
location             : 26 50
method_call          : 27
method_decl          : 1 10 11 11
method_name          : 42
program              : 0
statement            : 17 34 34 35
string_literal       : 43 44 59
type                 : 2 13 15 19
type_and_id          : 9 14 14
type_or_void         : 9
var_decl             : 17 20 20
var_decl_1           : 19 23 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . CLASS PROGRAM OPEN field_decl method_decl CLOSE

    CLASS           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> CLASS . PROGRAM OPEN field_decl method_decl CLOSE

    PROGRAM         shift and go to state 3


state 3

    (1) program -> CLASS PROGRAM . OPEN field_decl method_decl CLOSE

    OPEN            shift and go to state 4


state 4

    (1) program -> CLASS PROGRAM OPEN . field_decl method_decl CLOSE
    (2) field_decl -> . type field_decl_1 SEMI
    (3) field_decl -> . field_decl field_decl
    (4) field_decl -> . field_decl NEWLINE
    (5) field_decl -> . empty
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (74) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9
    NEWLINE         reduce using rule 74 (empty -> .)
    VOID            reduce using rule 74 (empty -> .)
    CLOSE           reduce using rule 74 (empty -> .)

  ! INT             [ reduce using rule 74 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 74 (empty -> .) ]

    field_decl                     shift and go to state 5
    type                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> CLASS PROGRAM OPEN field_decl . method_decl CLOSE
    (3) field_decl -> field_decl . field_decl
    (4) field_decl -> field_decl . NEWLINE
    (9) method_decl -> . type_or_void IDENTIFIER O_PAR type_and_id C_PAR block
    (10) method_decl -> . method_decl NEWLINE
    (11) method_decl -> . method_decl method_decl
    (12) method_decl -> . empty
    (2) field_decl -> . type field_decl_1 SEMI
    (3) field_decl -> . field_decl field_decl
    (4) field_decl -> . field_decl NEWLINE
    (5) field_decl -> . empty
    (15) type_or_void -> . type
    (16) type_or_void -> . VOID
    (74) empty -> .
    (24) type -> . INT
    (25) type -> . BOOLEAN

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    NEWLINE         shift and go to state 12
    VOID            shift and go to state 16
    CLOSE           reduce using rule 74 (empty -> .)
    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9

  ! NEWLINE         [ reduce using rule 74 (empty -> .) ]
  ! VOID            [ reduce using rule 74 (empty -> .) ]
  ! INT             [ reduce using rule 74 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 74 (empty -> .) ]

    field_decl                     shift and go to state 10
    method_decl                    shift and go to state 11
    type_or_void                   shift and go to state 13
    empty                          shift and go to state 14
    type                           shift and go to state 15

state 6

    (2) field_decl -> type . field_decl_1 SEMI
    (6) field_decl_1 -> . IDENTIFIER
    (7) field_decl_1 -> . IDENTIFIER O_BRACKET int_literal C_BRACKET
    (8) field_decl_1 -> . field_decl_1 COMMA field_decl_1

    IDENTIFIER      shift and go to state 18

    field_decl_1                   shift and go to state 17

state 7

    (5) field_decl -> empty .

    NEWLINE         reduce using rule 5 (field_decl -> empty .)
    VOID            reduce using rule 5 (field_decl -> empty .)
    INT             reduce using rule 5 (field_decl -> empty .)
    BOOLEAN         reduce using rule 5 (field_decl -> empty .)
    CLOSE           reduce using rule 5 (field_decl -> empty .)


state 8

    (24) type -> INT .

    IDENTIFIER      reduce using rule 24 (type -> INT .)


state 9

    (25) type -> BOOLEAN .

    IDENTIFIER      reduce using rule 25 (type -> BOOLEAN .)


state 10

    (3) field_decl -> field_decl field_decl .
    (3) field_decl -> field_decl . field_decl
    (4) field_decl -> field_decl . NEWLINE
    (2) field_decl -> . type field_decl_1 SEMI
    (3) field_decl -> . field_decl field_decl
    (4) field_decl -> . field_decl NEWLINE
    (5) field_decl -> . empty
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (74) empty -> .

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! reduce/reduce conflict for VOID resolved using rule 3 (field_decl -> field_decl field_decl .)
  ! reduce/reduce conflict for CLOSE resolved using rule 3 (field_decl -> field_decl field_decl .)
    VOID            reduce using rule 3 (field_decl -> field_decl field_decl .)
    CLOSE           reduce using rule 3 (field_decl -> field_decl field_decl .)
    NEWLINE         shift and go to state 12
    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9

  ! NEWLINE         [ reduce using rule 3 (field_decl -> field_decl field_decl .) ]
  ! INT             [ reduce using rule 3 (field_decl -> field_decl field_decl .) ]
  ! BOOLEAN         [ reduce using rule 3 (field_decl -> field_decl field_decl .) ]
  ! NEWLINE         [ reduce using rule 74 (empty -> .) ]
  ! INT             [ reduce using rule 74 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 74 (empty -> .) ]
  ! VOID            [ reduce using rule 74 (empty -> .) ]
  ! CLOSE           [ reduce using rule 74 (empty -> .) ]

    field_decl                     shift and go to state 10
    type                           shift and go to state 6
    empty                          shift and go to state 7

state 11

    (1) program -> CLASS PROGRAM OPEN field_decl method_decl . CLOSE
    (10) method_decl -> method_decl . NEWLINE
    (11) method_decl -> method_decl . method_decl
    (9) method_decl -> . type_or_void IDENTIFIER O_PAR type_and_id C_PAR block
    (10) method_decl -> . method_decl NEWLINE
    (11) method_decl -> . method_decl method_decl
    (12) method_decl -> . empty
    (15) type_or_void -> . type
    (16) type_or_void -> . VOID
    (74) empty -> .
    (24) type -> . INT
    (25) type -> . BOOLEAN

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for CLOSE resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    CLOSE           shift and go to state 20
    NEWLINE         shift and go to state 21
    VOID            shift and go to state 16
    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9

  ! NEWLINE         [ reduce using rule 74 (empty -> .) ]
  ! VOID            [ reduce using rule 74 (empty -> .) ]
  ! INT             [ reduce using rule 74 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 74 (empty -> .) ]
  ! CLOSE           [ reduce using rule 74 (empty -> .) ]

    method_decl                    shift and go to state 19
    type_or_void                   shift and go to state 13
    empty                          shift and go to state 22
    type                           shift and go to state 23

state 12

    (4) field_decl -> field_decl NEWLINE .

    NEWLINE         reduce using rule 4 (field_decl -> field_decl NEWLINE .)
    VOID            reduce using rule 4 (field_decl -> field_decl NEWLINE .)
    INT             reduce using rule 4 (field_decl -> field_decl NEWLINE .)
    BOOLEAN         reduce using rule 4 (field_decl -> field_decl NEWLINE .)
    CLOSE           reduce using rule 4 (field_decl -> field_decl NEWLINE .)


state 13

    (9) method_decl -> type_or_void . IDENTIFIER O_PAR type_and_id C_PAR block

    IDENTIFIER      shift and go to state 24


state 14

    (12) method_decl -> empty .
    (5) field_decl -> empty .

  ! reduce/reduce conflict for NEWLINE resolved using rule 5 (field_decl -> empty .)
  ! reduce/reduce conflict for INT resolved using rule 5 (field_decl -> empty .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 5 (field_decl -> empty .)
  ! reduce/reduce conflict for VOID resolved using rule 5 (field_decl -> empty .)
  ! reduce/reduce conflict for CLOSE resolved using rule 5 (field_decl -> empty .)
    NEWLINE         reduce using rule 5 (field_decl -> empty .)
    INT             reduce using rule 5 (field_decl -> empty .)
    BOOLEAN         reduce using rule 5 (field_decl -> empty .)
    VOID            reduce using rule 5 (field_decl -> empty .)
    CLOSE           reduce using rule 5 (field_decl -> empty .)

  ! CLOSE           [ reduce using rule 12 (method_decl -> empty .) ]
  ! NEWLINE         [ reduce using rule 12 (method_decl -> empty .) ]
  ! VOID            [ reduce using rule 12 (method_decl -> empty .) ]
  ! INT             [ reduce using rule 12 (method_decl -> empty .) ]
  ! BOOLEAN         [ reduce using rule 12 (method_decl -> empty .) ]


state 15

    (2) field_decl -> type . field_decl_1 SEMI
    (15) type_or_void -> type .
    (6) field_decl_1 -> . IDENTIFIER
    (7) field_decl_1 -> . IDENTIFIER O_BRACKET int_literal C_BRACKET
    (8) field_decl_1 -> . field_decl_1 COMMA field_decl_1

  ! shift/reduce conflict for IDENTIFIER resolved as shift
    IDENTIFIER      shift and go to state 18

  ! IDENTIFIER      [ reduce using rule 15 (type_or_void -> type .) ]

    field_decl_1                   shift and go to state 17

state 16

    (16) type_or_void -> VOID .

    IDENTIFIER      reduce using rule 16 (type_or_void -> VOID .)


state 17

    (2) field_decl -> type field_decl_1 . SEMI
    (8) field_decl_1 -> field_decl_1 . COMMA field_decl_1

    SEMI            shift and go to state 25
    COMMA           shift and go to state 26


state 18

    (6) field_decl_1 -> IDENTIFIER .
    (7) field_decl_1 -> IDENTIFIER . O_BRACKET int_literal C_BRACKET

    SEMI            reduce using rule 6 (field_decl_1 -> IDENTIFIER .)
    COMMA           reduce using rule 6 (field_decl_1 -> IDENTIFIER .)
    O_BRACKET       shift and go to state 27


state 19

    (11) method_decl -> method_decl method_decl .
    (10) method_decl -> method_decl . NEWLINE
    (11) method_decl -> method_decl . method_decl
    (9) method_decl -> . type_or_void IDENTIFIER O_PAR type_and_id C_PAR block
    (10) method_decl -> . method_decl NEWLINE
    (11) method_decl -> . method_decl method_decl
    (12) method_decl -> . empty
    (15) type_or_void -> . type
    (16) type_or_void -> . VOID
    (74) empty -> .
    (24) type -> . INT
    (25) type -> . BOOLEAN

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! reduce/reduce conflict for INT resolved using rule 11 (method_decl -> method_decl method_decl .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 11 (method_decl -> method_decl method_decl .)
  ! reduce/reduce conflict for CLOSE resolved using rule 11 (method_decl -> method_decl method_decl .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
    CLOSE           reduce using rule 11 (method_decl -> method_decl method_decl .)
    NEWLINE         shift and go to state 21
    VOID            shift and go to state 16
    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9

  ! NEWLINE         [ reduce using rule 11 (method_decl -> method_decl method_decl .) ]
  ! VOID            [ reduce using rule 11 (method_decl -> method_decl method_decl .) ]
  ! INT             [ reduce using rule 11 (method_decl -> method_decl method_decl .) ]
  ! BOOLEAN         [ reduce using rule 11 (method_decl -> method_decl method_decl .) ]
  ! NEWLINE         [ reduce using rule 74 (empty -> .) ]
  ! VOID            [ reduce using rule 74 (empty -> .) ]
  ! INT             [ reduce using rule 74 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 74 (empty -> .) ]
  ! CLOSE           [ reduce using rule 74 (empty -> .) ]

    method_decl                    shift and go to state 19
    type_or_void                   shift and go to state 13
    empty                          shift and go to state 22
    type                           shift and go to state 23

state 20

    (1) program -> CLASS PROGRAM OPEN field_decl method_decl CLOSE .

    $end            reduce using rule 1 (program -> CLASS PROGRAM OPEN field_decl method_decl CLOSE .)


state 21

    (10) method_decl -> method_decl NEWLINE .

    CLOSE           reduce using rule 10 (method_decl -> method_decl NEWLINE .)
    NEWLINE         reduce using rule 10 (method_decl -> method_decl NEWLINE .)
    VOID            reduce using rule 10 (method_decl -> method_decl NEWLINE .)
    INT             reduce using rule 10 (method_decl -> method_decl NEWLINE .)
    BOOLEAN         reduce using rule 10 (method_decl -> method_decl NEWLINE .)


state 22

    (12) method_decl -> empty .

    NEWLINE         reduce using rule 12 (method_decl -> empty .)
    VOID            reduce using rule 12 (method_decl -> empty .)
    INT             reduce using rule 12 (method_decl -> empty .)
    BOOLEAN         reduce using rule 12 (method_decl -> empty .)
    CLOSE           reduce using rule 12 (method_decl -> empty .)


state 23

    (15) type_or_void -> type .

    IDENTIFIER      reduce using rule 15 (type_or_void -> type .)


state 24

    (9) method_decl -> type_or_void IDENTIFIER . O_PAR type_and_id C_PAR block

    O_PAR           shift and go to state 28


state 25

    (2) field_decl -> type field_decl_1 SEMI .

    NEWLINE         reduce using rule 2 (field_decl -> type field_decl_1 SEMI .)
    VOID            reduce using rule 2 (field_decl -> type field_decl_1 SEMI .)
    INT             reduce using rule 2 (field_decl -> type field_decl_1 SEMI .)
    BOOLEAN         reduce using rule 2 (field_decl -> type field_decl_1 SEMI .)
    CLOSE           reduce using rule 2 (field_decl -> type field_decl_1 SEMI .)


state 26

    (8) field_decl_1 -> field_decl_1 COMMA . field_decl_1
    (6) field_decl_1 -> . IDENTIFIER
    (7) field_decl_1 -> . IDENTIFIER O_BRACKET int_literal C_BRACKET
    (8) field_decl_1 -> . field_decl_1 COMMA field_decl_1

    IDENTIFIER      shift and go to state 18

    field_decl_1                   shift and go to state 29

state 27

    (7) field_decl_1 -> IDENTIFIER O_BRACKET . int_literal C_BRACKET
    (68) int_literal -> . DECIMAL
    (69) int_literal -> . HEXDECIMAL

    DECIMAL         shift and go to state 31
    HEXDECIMAL      shift and go to state 32

    int_literal                    shift and go to state 30

state 28

    (9) method_decl -> type_or_void IDENTIFIER O_PAR . type_and_id C_PAR block
    (13) type_and_id -> . type IDENTIFIER
    (14) type_and_id -> . type_and_id COMMA type_and_id
    (24) type -> . INT
    (25) type -> . BOOLEAN

    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9

    type_and_id                    shift and go to state 33
    type                           shift and go to state 34

state 29

    (8) field_decl_1 -> field_decl_1 COMMA field_decl_1 .
    (8) field_decl_1 -> field_decl_1 . COMMA field_decl_1

  ! shift/reduce conflict for COMMA resolved as shift
    SEMI            reduce using rule 8 (field_decl_1 -> field_decl_1 COMMA field_decl_1 .)
    COMMA           shift and go to state 26

  ! COMMA           [ reduce using rule 8 (field_decl_1 -> field_decl_1 COMMA field_decl_1 .) ]


state 30

    (7) field_decl_1 -> IDENTIFIER O_BRACKET int_literal . C_BRACKET

    C_BRACKET       shift and go to state 35


state 31

    (68) int_literal -> DECIMAL .

    C_BRACKET       reduce using rule 68 (int_literal -> DECIMAL .)
    ARITH_OP        reduce using rule 68 (int_literal -> DECIMAL .)
    REP_OP          reduce using rule 68 (int_literal -> DECIMAL .)
    EQ_OP           reduce using rule 68 (int_literal -> DECIMAL .)
    COND_OP         reduce using rule 68 (int_literal -> DECIMAL .)
    SEMI            reduce using rule 68 (int_literal -> DECIMAL .)
    C_PAR           reduce using rule 68 (int_literal -> DECIMAL .)
    COMMA           reduce using rule 68 (int_literal -> DECIMAL .)
    NEGATIVE        reduce using rule 68 (int_literal -> DECIMAL .)
    EXCL            reduce using rule 68 (int_literal -> DECIMAL .)
    O_PAR           reduce using rule 68 (int_literal -> DECIMAL .)
    STRING          reduce using rule 68 (int_literal -> DECIMAL .)
    IDENTIFIER      reduce using rule 68 (int_literal -> DECIMAL .)
    DECIMAL         reduce using rule 68 (int_literal -> DECIMAL .)
    HEXDECIMAL      reduce using rule 68 (int_literal -> DECIMAL .)
    CHAR            reduce using rule 68 (int_literal -> DECIMAL .)
    TRUE            reduce using rule 68 (int_literal -> DECIMAL .)
    FALSE           reduce using rule 68 (int_literal -> DECIMAL .)


state 32

    (69) int_literal -> HEXDECIMAL .

    C_BRACKET       reduce using rule 69 (int_literal -> HEXDECIMAL .)
    ARITH_OP        reduce using rule 69 (int_literal -> HEXDECIMAL .)
    REP_OP          reduce using rule 69 (int_literal -> HEXDECIMAL .)
    EQ_OP           reduce using rule 69 (int_literal -> HEXDECIMAL .)
    COND_OP         reduce using rule 69 (int_literal -> HEXDECIMAL .)
    SEMI            reduce using rule 69 (int_literal -> HEXDECIMAL .)
    C_PAR           reduce using rule 69 (int_literal -> HEXDECIMAL .)
    COMMA           reduce using rule 69 (int_literal -> HEXDECIMAL .)
    NEGATIVE        reduce using rule 69 (int_literal -> HEXDECIMAL .)
    EXCL            reduce using rule 69 (int_literal -> HEXDECIMAL .)
    O_PAR           reduce using rule 69 (int_literal -> HEXDECIMAL .)
    STRING          reduce using rule 69 (int_literal -> HEXDECIMAL .)
    IDENTIFIER      reduce using rule 69 (int_literal -> HEXDECIMAL .)
    DECIMAL         reduce using rule 69 (int_literal -> HEXDECIMAL .)
    HEXDECIMAL      reduce using rule 69 (int_literal -> HEXDECIMAL .)
    CHAR            reduce using rule 69 (int_literal -> HEXDECIMAL .)
    TRUE            reduce using rule 69 (int_literal -> HEXDECIMAL .)
    FALSE           reduce using rule 69 (int_literal -> HEXDECIMAL .)


state 33

    (9) method_decl -> type_or_void IDENTIFIER O_PAR type_and_id . C_PAR block
    (14) type_and_id -> type_and_id . COMMA type_and_id

    C_PAR           shift and go to state 36
    COMMA           shift and go to state 37


state 34

    (13) type_and_id -> type . IDENTIFIER

    IDENTIFIER      shift and go to state 38


state 35

    (7) field_decl_1 -> IDENTIFIER O_BRACKET int_literal C_BRACKET .

    SEMI            reduce using rule 7 (field_decl_1 -> IDENTIFIER O_BRACKET int_literal C_BRACKET .)
    COMMA           reduce using rule 7 (field_decl_1 -> IDENTIFIER O_BRACKET int_literal C_BRACKET .)


state 36

    (9) method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR . block
    (17) block -> . OPEN var_decl statement CLOSE
    (18) block -> . OPEN CLOSE

    OPEN            shift and go to state 40

    block                          shift and go to state 39

state 37

    (14) type_and_id -> type_and_id COMMA . type_and_id
    (13) type_and_id -> . type IDENTIFIER
    (14) type_and_id -> . type_and_id COMMA type_and_id
    (24) type -> . INT
    (25) type -> . BOOLEAN

    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9

    type_and_id                    shift and go to state 41
    type                           shift and go to state 34

state 38

    (13) type_and_id -> type IDENTIFIER .

    C_PAR           reduce using rule 13 (type_and_id -> type IDENTIFIER .)
    COMMA           reduce using rule 13 (type_and_id -> type IDENTIFIER .)


state 39

    (9) method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR block .

    CLOSE           reduce using rule 9 (method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR block .)
    NEWLINE         reduce using rule 9 (method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR block .)
    VOID            reduce using rule 9 (method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR block .)
    INT             reduce using rule 9 (method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR block .)
    BOOLEAN         reduce using rule 9 (method_decl -> type_or_void IDENTIFIER O_PAR type_and_id C_PAR block .)


state 40

    (17) block -> OPEN . var_decl statement CLOSE
    (18) block -> OPEN . CLOSE
    (19) var_decl -> . type var_decl_1 SEMI
    (20) var_decl -> . var_decl var_decl NEWLINE
    (21) var_decl -> . empty
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (74) empty -> .

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for CLOSE resolved as shift
    CLOSE           shift and go to state 43
    INT             shift and go to state 8
    BOOLEAN         shift and go to state 9
    IF              reduce using rule 74 (empty -> .)
    WHILE           reduce using rule 74 (empty -> .)
    RETURN          reduce using rule 74 (empty -> .)
    BREAK           reduce using rule 74 (empty -> .)
    CONTINUE        reduce using rule 74 (empty -> .)
    IDENTIFIER      reduce using rule 74 (empty -> .)
    CALLOUT         reduce using rule 74 (empty -> .)
    OPEN            reduce using rule 74 (empty -> .)
    NEWLINE         reduce using rule 74 (empty -> .)

  ! INT             [ reduce using rule 74 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 74 (empty -> .) ]
  ! CLOSE           [ reduce using rule 74 (empty -> .) ]

    var_decl                       shift and go to state 42
    type                           shift and go to state 44
    empty                          shift and go to state 45

state 41

    (14) type_and_id -> type_and_id COMMA type_and_id .
    (14) type_and_id -> type_and_id . COMMA type_and_id

  ! shift/reduce conflict for COMMA resolved as shift
    C_PAR           reduce using rule 14 (type_and_id -> type_and_id COMMA type_and_id .)
    COMMA           shift and go to state 37

  ! COMMA           [ reduce using rule 14 (type_and_id -> type_and_id COMMA type_and_id .) ]


state 42
